# AoC2021

./: aoc2021.cabal
lib/: AoC2021.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs
