cabal-version:   3.0
name:            aoc2021
version:         0.0
build-type:      Simple
license:         Apache-2.0
license-file:    LICENSE
author:          Jim Mattson
stability:       experimental
synopsis:        Advent of Code 2021

library
  default-language:Haskell2010
  hs-source-dirs:  lib
  build-depends:   base >= 4 && < 5,
                   optparse-applicative >= 0.16 && < 0.17
  exposed-modules: AoC2021

common src-deps
  default-language:Haskell2010
  hs-source-dirs:  src
  build-depends:   base >= 4 && < 5,
                   optparse-applicative >= 0.16 && < 0.17,
                   aoc2021

executable Day01
  import:          src-deps
  main-is:         Day01.hs

executable Day02
  import:          src-deps
  main-is:         Day02.hs
  build-depends:   split >= 0.2 && < 0.3
